<resources>
    <string name="app_name">Essensplaner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--    not sus what so ever-->
    <string name="akzeptieren_sie_die_agbs">Akzeptieren Sie die <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> AGB</a>s!</string>
    <string name="login">Login</string>
    <string name="string_login" />
    <string name="string_string_login" />
    <string name="string_string_string_login" />
    <string name="string_string_string_string_login">Login</string>
    <string name="einkaufsliste">Einkaufsliste</string>
    <string name="string_einkaufsliste">Einkaufsliste</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anzahl">Anzahl</string>
    <string name="produkt">Produkt</string>
    <string name="add_to_table">Add to table</string>
    <string name="string_logout">Logout</string>
    <string name="insert">Insert</string>
    <string name="title_activity_einkaufsliste_test">einkaufslisteTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="rezepte">Rezepte</string>
    <string name="favorites">Favorites</string>
    <string name="planer">PLaner</string>
</resources>