<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/Planer"
            android:title="@string/planer" />
        <item
            android:id="@+id/Favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/Rezepte"
            android:title="@string/rezepte" />
        <item
            android:id="@+id/einkaufsliste"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/string_einkaufsliste" />
        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/settings" />
    </group>
</menu>